git subrepo clone --branch=fix-print-input-mac --force https://github.com/ccordoba12/qtconsole.git external-deps/qtconsole
subrepo:
  subdir:   "external-deps/qtconsole"
  merged:   "03af73738"
upstream:
  origin:   "https://github.com/ccordoba12/qtconsole.git"
  branch:   "fix-print-input-mac"
  commit:   "03af73738"
git-subrepo:
  version:  "0.4.3"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "2f68596"

--- a/external-deps/qtconsole/.github/workflows/linux-tests.yml
+++ b/external-deps/qtconsole/.github/workflows/linux-tests.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       CI: True
+      QTCONSOLE_TESTING: True
       PYTHON_VERSION: ${{ matrix.PYTHON_VERSION }}
       RUNNER_OS: 'ubuntu'
       COVERALLS_REPO_TOKEN: XWVhJf2AsO7iouBLuCsh0pPhwHy81Uz1v
@@ -54,7 +55,11 @@ jobs:
         shell: bash -l {0}
         run: |
           pip install -e .[test]
-          pip install ${{ matrix.QT_LIB }} coveralls pytest-cov
+          if [ ${{ matrix.QT_LIB }} = "pyqt6" ]; then
+            pip install pyqt6!=6.4.0 pyqt6-qt6!=6.4.0 coveralls pytest-cov
+          else
+            pip install ${{ matrix.QT_LIB }} coveralls pytest-cov
+          fi
       - name: Show environment information
         shell: bash -l {0}
         run: |
