--- a/.github/workflows/installers-conda.yml
+++ b/.github/workflows/installers-conda.yml
@@ -91,8 +91,10 @@ jobs:
   build-installers:
     name: Build installer for ${{ matrix.target-platform }} Python-${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
-    needs: [build-matrix, build-noarch-conda-pkgs]
-    if: always()
+    needs:
+      - build-matrix
+      - build-noarch-conda-pkgs
+    if: needs.build-noarch-conda-pkgs.result == 'success' || needs.build-noarch-conda-pkgs.result == 'skipped'
     strategy:
       matrix:
         target-platform: ${{fromJson(needs.build-matrix.outputs.target_platform)}}
