--- a/.github/workflows/test-files.yml
+++ b/.github/workflows/test-files.yml
@@ -45,7 +45,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        PYTHON_VERSION: ['3.7', '3.9']
+        PYTHON_VERSION: ['3.9']
     timeout-minutes: 30
     steps:
       - name: Checkout Pull Requests
