--- a/external-deps/python-lsp-server/pyproject.toml
+++ b/external-deps/python-lsp-server/pyproject.toml
@@ -34,7 +34,7 @@ all = [
     "pydocstyle>=2.0.0",
     "pyflakes>=2.5.0,<2.6.0",
     "pylint>=2.5.0",
-    "rope>=0.10.5",
+    "rope>1.2.0",
     "yapf",
     "whatthepatch"
 ]
@@ -45,7 +45,7 @@ pycodestyle = ["pycodestyle>=2.9.0,<2.10.0"]
 pydocstyle = ["pydocstyle>=2.0.0"]
 pyflakes = ["pyflakes>=2.5.0,<2.6.0"]
 pylint = ["pylint>=2.5.0"]
-rope = ["rope>0.10.5"]
+rope = ["rope>1.2.0"]
 yapf = ["yapf", "whatthepatch>=1.0.2,<2.0.0"]
 websockets = ["websockets>=10.3"]
 test = [
@@ -80,6 +80,7 @@ pyflakes = "pylsp.plugins.pyflakes_lint"
 pylint = "pylsp.plugins.pylint_lint"
 rope_completion = "pylsp.plugins.rope_completion"
 rope_rename = "pylsp.plugins.rope_rename"
+rope_autoimport = "pylsp.plugins.rope_autoimport"
 yapf = "pylsp.plugins.yapf_format"
 
 [project.scripts]
@@ -100,3 +101,7 @@ write_to_template = "__version__ = \"{version}\"\n"  # VERSION_INFO is populated
 [tool.pytest.ini_options]
 testpaths = ["test"]
 addopts = "--cov-report html --cov-report term --junitxml=pytest.xml --cov pylsp --cov test"
+
+[tool.coverage.run]
+concurrency = ["multiprocessing", "thread"]
+
