Do not include arm64 platform

--- a/.github/workflows/installers-conda.yml
+++ b/.github/workflows/installers-conda.yml
@@ -71,10 +71,9 @@ jobs:
     steps:
     - id: build-matrix
       run: |
-        target_platform="'osx-64', 'osx-arm64', 'linux-64'"
+        target_platform="'osx-64', 'linux-64'"
         include="\
         {'os': 'macos-11', 'target-platform': 'osx-64'},\
-        {'os': 'macos-latest', 'target-platform': 'osx-arm64'},\
         {'os': 'ubuntu-latest', 'target-platform': 'linux-64'}\
         "
         python_version="'3.9'"
