--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -36,7 +36,7 @@ on:
 jobs:
   build:
     name: Linux - Py${{ matrix.PYTHON_VERSION }}, ${{ matrix.INSTALL_TYPE }}, ${{ matrix.TEST_TYPE }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       CI: 'true'
       QTCONSOLE_TESTING: 'true'
