CI: Cancel runs in progress when pushing new ones
This is necessary now that our Heroku bot is not working anymore.

--- a/.github/workflows/installer-macos.yml
+++ b/.github/workflows/installer-macos.yml
@@ -18,6 +18,10 @@ on:
     types:
       - created
 
+concurrency:
+  group: installer-macos-${{ github.ref }}
+  cancel-in-progress: true
+
 name: Create macOS App Bundle and DMG
 
 jobs:
