--- a/.github/workflows/installer-win.yml
+++ b/.github/workflows/installer-win.yml
@@ -19,6 +19,10 @@ on:
     types:
       - created
 
+concurrency:
+  group: installer-win-${{ github.ref }}
+  cancel-in-progress: true
+
 name: Create Windows Installer
 
 jobs:
