--- a/.github/workflows/test-files.yml
+++ b/.github/workflows/test-files.yml
@@ -33,6 +33,10 @@ on:
       - '!installers*/**'
       - '!.github/workflows/installer*.yml'
 
+concurrency:
+  group: test-files-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     name: Linux - Py${{ matrix.PYTHON_VERSION }}
