--- a/.github/workflows/test-mac.yml
+++ b/.github/workflows/test-mac.yml
@@ -33,6 +33,10 @@ on:
       - '!installers*/**'
       - '!.github/workflows/installer*.yml'
 
+concurrency:
+  group: test-mac-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     name: Mac - Py${{ matrix.PYTHON_VERSION }}, ${{ matrix.INSTALL_TYPE }}, ${{ matrix.TEST_TYPE }}
