git subrepo pull external-deps/python-lsp-server
subrepo:
  subdir:   "external-deps/python-lsp-server"
  merged:   "a79c171da"
upstream:
  origin:   "https://github.com/python-lsp/python-lsp-server.git"
  branch:   "develop"
  commit:   "a79c171da"
git-subrepo:
  version:  "0.4.3"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "2f68596"

--- a/external-deps/python-lsp-server/.github/workflows/static.yml
+++ b/external-deps/python-lsp-server/.github/workflows/static.yml
@@ -9,6 +9,10 @@ on:
     branches:
       - '*'
 
+concurrency:
+  group: static-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build:
     name: Static code analysis
@@ -21,7 +25,7 @@ jobs:
       - uses: actions/cache@v1
         with:
           path: ~/.cache/pip
-          key: static-pip-${{ hashFiles('setup.py') }}
+          key: static-pip-${{ hashFiles('pyproject.toml') }}
           restore-keys: static-pip-
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
