--- a/.github/workflows/test-files.yml
+++ b/.github/workflows/test-files.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Cache conda
         uses: actions/cache@v2
         env:
-          # Increase this value to reset cache if requirements/*.txt has not changed
+          # Increase this value to reset cache if requirements/*.yml has not changed
           CACHE_NUMBER: 0
         with:
           path: ~/conda_pkgs_dir
@@ -99,7 +99,6 @@ jobs:
            auto-update-conda: false
            auto-activate-base: false
            python-version: ${{ matrix.PYTHON_VERSION }}
-           use-only-tar-bz2: true
            channels: conda-forge,defaults
            channel-priority: strict
            miniforge-variant: Mambaforge
