Fix issue "./codesign.sh: line 39: pcregrep: command not found". For some reason, pcregrep was available on macOS Github images previously, but no longer. Ensure that pcregrep is installed.

--- a/.github/workflows/installer-macos.yml
+++ b/.github/workflows/installer-macos.yml
@@ -66,6 +66,13 @@ jobs:
         with:
           python-version: '3.9.14'
           architecture: 'x64'
+      - name: Install pcregrep
+        run: |
+          if [[ -z "$(which pcregrep)" ]]; then
+              brew install pcre
+          else
+              echo "$(which pcregrep) already installed."
+          fi
       - name: Install Dependencies
         run: |
           INSTALL_FLAGS=()
