Fix issue where python was improperly called. Note that liblzma.5.dylib has not been copied for any releases. I'm not sure why codesigning did not fail. Perhaps copying the dylib was required on a local build but not on CI :shrug:. Nevertheless, let's see if this causes any issues.

--- a/.github/workflows/installer-macos.yml
+++ b/.github/workflows/installer-macos.yml
@@ -94,7 +94,7 @@ jobs:
       - name: Code Sign Application
         if: ${{github.event_name == 'release'}}
         run: |
-          pil=$(${pythonLocation} -c "import PIL, os; print(os.path.dirname(PIL.__file__))")
+          pil=$(${pythonLocation}/bin/python -c "import PIL, os; print(os.path.dirname(PIL.__file__))")
           rm -v ${DISTDIR}/Spyder.app/Contents/Frameworks/liblzma.5.dylib
           cp -v ${pil}/.dylibs/liblzma.5.dylib ${DISTDIR}/Spyder.app/Contents/Frameworks/
           ./codesign.sh "${DISTDIR}/Spyder.app"
