Implied success() causes job to skip. Use "! failure() && ! cancelled()".

--- a/.github/workflows/installers-conda.yml
+++ b/.github/workflows/installers-conda.yml
@@ -97,7 +97,7 @@ jobs:
     needs:
       - build-matrix
       - build-noarch-pkgs
-    if: contains(fromJson('["success", "skipped"]'), needs.build-noarch-pkgs.result) && needs.build-matrix.result == 'success'
+    if: ${{ ! failure() && ! cancelled() }}
     strategy:
       matrix:
         target-platform: ${{fromJson(needs.build-matrix.outputs.target_platform)}}
@@ -115,6 +115,8 @@ jobs:
       APPLICATION_PWD: ${{ secrets.APPLICATION_PWD }}
       CONSTRUCTOR_TARGET_PLATFORM: ${{ matrix.target-platform }}
       STATUS: ${{ needs.build-noarch-pkgs.result }}
+      MAT_STATUS: ${{ needs.build-matrix.result }}
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
