Reduce test scope and print more environment info. What startup scripts are available?

--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -53,9 +53,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        INSTALL_TYPE: ['pip', 'conda']
-        PYTHON_VERSION: ['3.8', '3.10']
-        TEST_TYPE: ['fast', 'slow']
+        INSTALL_TYPE: ['conda']
+        PYTHON_VERSION: ['3.10']
+        TEST_TYPE: ['fast']
     timeout-minutes: 120
     steps:
       - name: Checkout Pull Requests
@@ -117,6 +117,8 @@ jobs:
         run: |
           conda info
           conda list
+          printenv
+          ls -a ~
       #- name: Setup tmate session
       #  if: env.RUN_BUILD == 'true'
       #  uses: mxschmitt/action-tmate@v3
@@ -134,9 +136,9 @@ jobs:
         shell: bash -l {0}
         run: |
           rm -f pytest_log.txt  # Must remove any log file from a previous run
-          bash -l .github/scripts/run_tests.sh || \
-          bash -l .github/scripts/run_tests.sh || \
-          bash -l .github/scripts/run_tests.sh || \
+          # bash -l .github/scripts/run_tests.sh || \
+          # bash -l .github/scripts/run_tests.sh || \
+          # bash -l .github/scripts/run_tests.sh || \
           bash -l .github/scripts/run_tests.sh
       - name: Coverage
         if: env.RUN_BUILD == 'true'
