git subrepo pull --remote=https://github.com/ccordoba12/python-lsp-server.git --branch=improve-file-completions --update --force external-deps/python-lsp-server
subrepo:
  subdir:   "external-deps/python-lsp-server"
  merged:   "dbf75cf19"
upstream:
  origin:   "https://github.com/ccordoba12/python-lsp-server.git"
  branch:   "improve-file-completions"
  commit:   "dbf75cf19"
git-subrepo:
  version:  "0.4.3"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "2f68596"

--- a/external-deps/python-lsp-server/pyproject.toml
+++ b/external-deps/python-lsp-server/pyproject.toml
@@ -33,10 +33,10 @@ all = [
     "pycodestyle>=2.9.0,<2.11.0",
     "pydocstyle>=6.2.0,<6.3.0",
     "pyflakes>=2.5.0,<3.1.0",
-    "pylint>=2.5.0",
+    "pylint>=2.5.0,<3",
     "rope>1.2.0",
     "yapf",
-    "whatthepatch"
+    "whatthepatch>=1.0.2,<2.0.0"
 ]
 autopep8 = ["autopep8>=1.6.0,<1.7.0"]
 flake8 = ["flake8>=5.0.0,<7"]
@@ -44,12 +44,12 @@ mccabe = ["mccabe>=0.7.0,<0.8.0"]
 pycodestyle = ["pycodestyle>=2.9.0,<2.11.0"]
 pydocstyle = ["pydocstyle>=6.2.0,<6.3.0"]
 pyflakes = ["pyflakes>=2.5.0,<3.1.0"]
-pylint = ["pylint>=2.5.0"]
+pylint = ["pylint>=2.5.0,<3"]
 rope = ["rope>1.2.0"]
 yapf = ["yapf", "whatthepatch>=1.0.2,<2.0.0"]
 websockets = ["websockets>=10.3"]
 test = [
-    "pylint>=2.5.0",
+    "pylint>=2.5.0,<3",
     "pytest",
     "pytest-cov",
     "coverage",
