--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -96,31 +96,46 @@ jobs:
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-cachepip-install${{ matrix.INSTALL_TYPE }}-${{ env.CACHE_NUMBER }}-${{ hashFiles('setup.py') }}
-      - name: Install Conda
-        if: env.RUN_BUILD == 'true'
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Create conda test environment
+        if: env.USE_CONDA == 'true'
+        uses: mamba-org/provision-with-micromamba@main
         with:
-          activate-environment: test
-          auto-update-conda: false
-          auto-activate-base: false
-          python-version: ${{ matrix.PYTHON_VERSION }}
-          channels: conda-forge,defaults
-          channel-priority: strict
-          miniforge-variant: Mambaforge
-      - name: Create test environment
+          environment-file: requirements/main.yml
+          environment-name: test
+          cache-downloads: true
+          extra-specs: |
+            python=${{ matrix.PYTHON_VERSION }}
+      - name: Create pip test environment
+        if: env.USE_CONDA != 'true'
+        uses: mamba-org/provision-with-micromamba@main
+        with:
+          environment-file: false
+          environment-name: test
+          cache-downloads: true
+          channels: conda-forge
+          extra-specs: |
+            python=${{ matrix.PYTHON_VERSION }}
+      - name: Install additional dependencies
         if: env.RUN_BUILD == 'true'
         shell: bash -l {0}
         run: bash -l .github/scripts/install.sh
-      - name: Show test environment
-        if: env.RUN_BUILD == 'true'
+      - name: Show conda test environment
+        if: env.USE_CONDA == 'true'
         shell: bash -l {0}
         run: |
-          conda info
-          conda list
+          micromamba info
+          micromamba list
+      - name: Show pip test environment
+        if: env.USE_CONDA != 'true'
+        shell: bash -l {0}
+        run: |
+          micromamba info
+          micromamba list
+          pip list
       #- name: Setup tmate session
-      #  if: env.RUN_BUILD == 'true'
+      #  if: env.USE_CONDA == 'true'
       #  uses: mxschmitt/action-tmate@v3
-      #  timeout-minutes: 30
+      #  timeout-minutes: 45
       - name: Run manifest checks
         if: env.RUN_BUILD == 'true'
         shell: bash -l {0}
@@ -142,7 +157,3 @@ jobs:
         if: env.RUN_BUILD == 'true'
         shell: bash -l {0}
         run: codecov
-      # Enable this if SSH debugging is required
-      # - name: Setup tmate session
-      #   uses: andfoy/action-tmate@69bac54a5cc0abe008e87d7470fbf65733745aea
-      #   if: ${{ failure() }}
