--- a/.github/workflows/test-mac.yml
+++ b/.github/workflows/test-mac.yml
@@ -89,18 +89,15 @@ jobs:
         with:
           path: ~/Library/Caches/pip
           key: ${{ runner.os }}-cachepip-install${{ matrix.INSTALL_TYPE }}-${{ env.CACHE_NUMBER }}-${{ hashFiles('setup.py') }}
-      - name: Install Conda
-        if: env.RUN_BUILD == 'true'
-        uses: conda-incubator/setup-miniconda@v2
+      - name: Create conda test environment
+        uses: mamba-org/provision-with-micromamba@main
         with:
-          activate-environment: test
-          auto-update-conda: false
-          auto-activate-base: false
-          python-version: ${{ matrix.PYTHON_VERSION }}
-          channels: conda-forge,defaults
-          channel-priority: strict
-          miniforge-variant: Mambaforge
-      - name: Create test environment
+          environment-file: requirements/main.yml
+          environment-name: test
+          cache-downloads: true
+          extra-specs: |
+            python=${{ matrix.PYTHON_VERSION }}
+      - name: Install additional dependencies
         if: env.RUN_BUILD == 'true'
         shell: bash -l {0}
         run: bash -l .github/scripts/install.sh
@@ -108,8 +105,12 @@ jobs:
         if: env.RUN_BUILD == 'true'
         shell: bash -l {0}
         run: |
-          conda info
-          conda list
+          micromamba info
+          micromamba list
+      #- name: Setup tmate session
+      #  if: env.USE_CONDA == 'true'
+      #  uses: mxschmitt/action-tmate@v3
+      #  timeout-minutes: 45
       - name: Run manifest checks
         if: env.RUN_BUILD == 'true'
         shell: bash -l {0}
@@ -123,10 +124,6 @@ jobs:
           bash -l .github/scripts/run_tests.sh || \
           bash -l .github/scripts/run_tests.sh || \
           bash -l .github/scripts/run_tests.sh
-      # Enable this if SSH debugging is required
-      # - name: Setup tmate session
-      #   uses: mxschmitt/action-tmate@v3
-      #   if: ${{ failure() }}
       - name: Coverage
         if: env.RUN_BUILD == 'true'
         shell: bash -l {0}
