--- a/.github/workflows/test-files.yml
+++ b/.github/workflows/test-files.yml
@@ -33,6 +33,8 @@ on:
       - '!installers*/**'
       - '!.github/workflows/installer*.yml'
 
+  workflow_dispatch:
+
 concurrency:
   group: test-files-${{ github.ref }}
   cancel-in-progress: true
