--- a/.github/workflows/installers-conda.yml
+++ b/.github/workflows/installers-conda.yml
@@ -260,6 +260,7 @@ jobs:
         run: ./notarize.sh -p $APPLICATION_PWD $PKG_FILE
 
       - name: Upload Artifact
+        if: env.IS_RELEASE == 'false'
         uses: actions/upload-artifact@v3
         with:
           path: ${{ env.PKG_FILE }}
